--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ easyocr~=1.7.0
 torch~=2.0.1
 streamlit~=1.25.0
 Pillow==9.5.0
+opencv-python~=4.8.0.76
 clams-python==1.0.9
 mmif-python[cv]==1.0.8
-tqdm
+tqdm==4.66.1
